<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WATWAT</string>
    <string name="app_title">วัดพระปฐมเจดีย์ราชวรมหาวิหาร</string>
    <string name="app_subtitle">(องค์พระปฐมเจดีย์)</string>
    <string name="start_button">เริ่มต้น</string>

    <string name="nav_home">หน้าแรก</string>
    <string name="nav_about">เกี่ยวกับวัด</string>
    <string name="nav_sakkara">การสักการะ</string>
    <string name="nav_prayer">บทสวดมนต์</string>
    <string name="nav_festival">เทศกาลสำคัญ</string>
    <string name="nav_contact">ติดต่อ</string>

    <string name="title_history">ประวัติความเป็นมา</string>
    <string name="title_temple">วัดพระปฐมเจดีย์ราชวรมหาวิหาร</string>
    <string name="temple_info">
        พระปฐมเจดีย์เป็นปูชนียสถานสำคัญในจังหวัดนครปฐม มีประวัติความเป็นมายาวนานตั้งแต่สมัยทวารวดี
        โดยในช่วงพุทธศตวรรษที่ 11 เมืองนครปฐมโบราณเป็นศูนย์กลางการค้าทางทะเลที่รุ่งเรือง
        มีเจดีย์ทรงกลมฐานสี่เหลี่ยมขนาดใหญ่ที่เรียกว่า "มหาธาตุหลวง" หรือ "พระธม"

        ต่อมาในสมัยกรุงศรีอยุธยา เมืองนครปฐมโบราณเริ่มเสื่อมความสำคัญ แต่พระธมยังคงเป็นสถานที่ศักดิ์สิทธิ์
        ที่ผู้คนเดินทางมานมัสการ จนกระทั่งในปี พ.ศ. 2374
        พระบาทสมเด็จพระจอมเกล้าเจ้าอยู่หัว (รัชกาลที่ 4) ขณะทรงผนวช ได้เสด็จธุดงค์มานมัสการสถูปเจดีย์ใหญ่เมืองนครไชยศรี
        และทรงเรียกชื่อว่า "พระปฐมเจดีย์"
    </string>

    <string name="worship_points">จุดสักการะภายในวัด</string>
    <string name="phra_pathom_chedi">องค์พระปฐมเจดีย์</string>
    <string name="point_1_info">จุดที่ 1 “องค์พระปฐมเจดีย์” ถือเป็นพระมหาเจดีย์ที่มีขนาดใหญ่ที่สุดในประเทศไทย เดิมมีชื่อเรียกว่า “พระธมเจดีย์” ประวัติความเป็นมาขององค์พระปฐมเจดีย์มีมาอย่างยาวนานย้อนกลับไปถึงยุคสุวรรณภูมิ คาดว่าถูกสร้างขึ้นเมื่อคราวที่พระสมณทูตในพระเจ้าอโศกมหาราช เดินทางมาเผยแผ่ศาสนายังสุวรรณภูมิ องค์พระปฐมเจดีย์นั้นเป็นพระเจดีย์ขนาดใหญ่ รูปทรงระฆังคว่ำ โครงสร้างเดิมเป็นไม้ซุง รัดด้วยโซ่เส้นใหญ่ ก่อด้วยอิฐ ก่อนจะได้รับการปฏิสังขรณ์ในครั้งแรกโดยพระบาทสมเด็จพระจอมเกล้าเจ้าอยู่หัว (รัชกาลที่ 4) ขณะที่ทรงยังผนวชได้ธุดงค์และพบองค์พระปฐมเจดีย์ที่อยู่ในสภาพเก่าแก่ชำรุดทรุดโทรม</string>
    <string name="point_2">จุด 2</string>
    <string name="menu">เมนู</string>

    <string name="phra_ruang">พระร่วงโรจนฤทธิ์</string>
    <string name="phra_ruang_info">
        จุดที่ 2 พระร่วงโรจนฤทธิ์ เป็นพระพุทธรูปปางห้ามญาติศิลปะแบบสุโขทัย
        ประทับยืนอยู่บนฐานโลหะทองเหลืองลายบัวคว่ำบัวหงาย ทำวงพระพักตร์ตามยาว และพระบาทไม่เสมอกัน
        เป็นที่เคารพบูชาของชาวจังหวัดนครปฐมและพุทธศาสนิกชนชาวไทยทั่วไป
        ชื่อเต็มของพระร่วงโรจนฤทธิ์ก็คือ พระร่วงโรจนฤทธิ์ ศรีอินทราทิตย์ ธรรโมภาส มหาวชิราวุธ
        ราชปูชนียบพิตร ตามประกาศกระแสพระบรมราชโองการ แต่ประชาชนทั่วไปจะเรียกว่า
        "หลวงพ่อพระร่วง" หรือ "พระร่วงโรจนฤทธิ์"</string>
    <string name="point_3">จุด 3</string>

    <string name="shrine">ศาลเจ้าพ่อปราสาททอง</string>
    <string name="shrine_info">
        จุดที่ 3 “ศาลเจ้าพ่อปราสาททอง” ตั้งอยู่ด้านนอกพระระเบียงคด
        มีลักษณะคล้ายถ้ำที่สร้างขึ้นเพื่อการสักการะ “ศาลเจ้าพ่อเสือ”
        อยู่ใกล้กัน เป็นที่เคารพของชาวไทยเชื้อสายจีน
    </string>
    <string name="point_4">จุด 4</string>
    <string name="back">กลับ</string>
    <string name="back2">กลับ</string>
    <string name="back3">กลับ</string>
    <string name="back4">กลับ</string>

    <string name="goddess_umadevi">พระแม่อุมามหาเทวี</string>
    <string name="goddess_umadevi_info">
        จุดที่ 4 บริเวณใกล้กับศาลเจ้าพ่อปราสาททองและศาลเจ้าพ่อเสือ
        จะพบกับ “พระแม่อุมามหาเทวี” สามารถเดินเข้ากราบไหว้ขอพรกันได้
    </string>
    <string name="point_5">จุด 5</string>

    <string name="golden_takian_cave">ถ้ำตะเคียนทอง</string>
    <string name="golden_takian_cave_info">
        จุดที่ 5 “ถ้ำตะเคียนทอง” นั้นจะมีทางเดินที่ค่อนข้างกว้าง
        เมื่อเข้าไปด้านในแล้วจะมีทางเดินแยกเป็นสองทางคือ ถ้ำมหาโชคและถ้ำน้ำทิพย์
    </string>

    <string name="event_title">งานนมัสการองค์พระปฐมเจดีย์</string>
    <string name="event_date">จัดขึ้นทุกปี ช่วงขึ้น 12 ค่ำ – แรม 4 ค่ำ เดือน 12 (ปี 2567 จัดวันที่ 12-20 พ.ย.)</string>
    <string name="event_location">วัดพระปฐมเจดีย์ จ.นครปฐม</string>
    <string name="event_description">งานนมัสการองค์พระปฐมเจดีย์ เป็นเทศกาลประจำปีของ วัดพระปฐมเจดีย์ จ.นครปฐม จัดขึ้นช่วง ขึ้น 12 ค่ำ – แรม 4 ค่ำ เดือน 12 (ปี 2567 คือ 12-20 พ.ย.) ภายในงานมี พิธีแห่ผ้าห่มองค์พระปฐมเจดีย์ การนมัสการพระบรมสารีริกธาตุ ร้านค้า การแสดงมหรสพ และคอนเสิร์ต</string>


    <string name="contact_title">️การเดินทาง🚶‍♂️</string>
    <string name="travel_title">เดินทางโดยรถไฟฟ้าและรถไฟทางไกล</string>
    <string name="step1_train">รถไฟฟ้าสายสีแดง \n(สถานีกลางบางซื่อ - ตลิ่งชัน)</string>

    <string name="step1_detail">ขึ้นที่สถานีกลางบางซื่อ นั่งไปสถานีตลิ่งชัน \n(ชานชาลา 9-10)</string>
    <string name="step2_train">รถไฟ Feeder (ตลิ่งชัน - นครปฐม)</string>
    <string name="step2_detail">ต่อรถไฟทางไกลที่สถานีชุมทางตลิ่งชัน นั่งไปสถานีรถไฟนครปฐม</string>
    <string name="step3_walk">เดินทางถึงองค์พระปฐมเจดีย์</string>
    <string name="step3_detail">เดินข้ามสะพานเจริญศรัทธา ถึงองค์พระปฐมเจดีย์</string>



</resources>
