<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- แถบเปลี่ยนภาษา -->
        <LinearLayout
            android:id="@+id/languageBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/language_bg"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/langTH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" TH"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/krub"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:tag="th"/>

            <TextView
                android:id="@+id/langCH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|    CH"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/krub"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:tag="ch"/>

            <TextView
                android:id="@+id/langEN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|    EN"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/krub"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:tag="en"/>
        </LinearLayout>

        <!-- หัวข้อเทศกาล -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/krubmedium"
            android:text="@string/contact_title"
            android:textColor="#FF7352"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- การ์ดเนื้อหาเทศกาล -->
        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="380dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="480dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/festival_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/travel_title"
                    android:fontFamily="@font/krub"
                    android:textSize="18sp"
                    android:textColor="#FF7352"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/festival_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krub"
                    android:text="@string/step1_train"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#444"/>

                <TextView
                    android:id="@+id/festival_location2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krub"
                    android:text="@string/step1_detail"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#444"/>

                <TextView
                    android:id="@+id/festival_location3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krubmedium"
                    android:text="@string/step2_train"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#444"/>

                <TextView
                    android:id="@+id/festival_location4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krub"
                    android:text="@string/step2_detail"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#444"/>

                <TextView
                    android:id="@+id/festival_location5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krubmedium"
                    android:text="@string/step3_walk"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#444"/>

                <TextView
                    android:id="@+id/festival_location6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krub"
                    android:text="@string/step3_detail"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#444"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/image_between_title_and_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/train"
                android:scaleType="fitXY" />

        </com.google.android.material.card.MaterialCardView>

        <!-- ปุ่มเมนู ซ้ายบน -->
        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/backham"
            android:src="@drawable/menu_icon"
            android:layout_marginTop="60dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/menu"
            android:clickable="true"
            android:focusable="true"/>

    </RelativeLayout>

    <!-- เมนูด้านข้าง -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/nav_menu_background"
        app:itemTextAppearance="@style/NavigationViewTextSize"
        app:itemVerticalPadding="24dp"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/nav_header"/>
</androidx.drawerlayout.widget.DrawerLayout>