<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ภาษา -->
        <LinearLayout
            android:id="@+id/languageBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/language_bg"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/langTH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" TH"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/krub"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:tag="th"/>

            <TextView
                android:id="@+id/langCH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|    CH"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/krub"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:tag="ch"/>

            <TextView
                android:id="@+id/langEN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|    EN"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="@font/krub"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:tag="en"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:fontFamily="@font/krubmedium"
                android:text="@string/worship_points"
                android:textColor="#FF7352"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="230dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/image_between_title_and_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/sakkara1"
                    android:scaleType="fitXY" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="190dp"
                android:fontFamily="@font/krub"
                android:text="@string/phra_pathom_chedi"
                android:textColor="#FF7352"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="320dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="500dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@android:color/white">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krub"
                    android:padding="20dp"
                    android:paddingTop="50dp"
                    android:text="@string/point_1_info"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <!-- ปุ่มเมนู ซ้ายบน -->
        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/backham"
            android:src="@drawable/menu_icon"
            android:layout_marginTop="60dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/menu"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/startButton"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="840dp"
            android:layout_marginStart="280dp"
            android:text="@string/point_2"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonbg" />



    </RelativeLayout>

    <!-- เมนูด้านข้าง -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/nav_menu_background"
        app:itemTextAppearance="@style/NavigationViewTextSize"
        app:itemVerticalPadding="24dp"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/nav_header"/>
</androidx.drawerlayout.widget.DrawerLayout>